--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
-    "socket.io": "^2.3.0",
     "terser-webpack-plugin": "^2.3.5",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
@@ -33,6 +32,6 @@
   },
   "dependencies": {
     "pixi.js": "^5.2.1",
-    "socket.io-client": "^2.3.0"
+    "uuidv4": "^6.0.6"
   }
 }
